<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blueb"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.draft.rough.etchproject.MainPage"
    tools:showIn="@layout/activity_main_page">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Etch"
        android:id="@+id/textView" />
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_states"
        android:text="@string/Post"
        android:id="@+id/button1"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_states"
        android:text="@string/Canvas"
        android:id="@+id/button2"
        android:layout_above="@+id/button5"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_states"
        android:text="@string/Newsfeed"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button4"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp" />
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_states"
        android:text="@string/Messages"
        android:id="@+id/button4"
        android:layout_marginBottom="173dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />
    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_states"
        android:text="@string/Home"
        android:id="@+id/button5"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_states"
        android:text="@string/Settings"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:onClick="onSettingsButtonClick"/>
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_states"
        android:text="@string/Notices"
        android:id="@+id/button7"
        android:layout_alignTop="@+id/button2"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

</RelativeLayout>
